..F....... [ZBX-22206] fixed incorrect padding in multiselect popup contrast dark and light stylesheets

--- a/ui/assets/styles/hc-dark.css
+++ b/ui/assets/styles/hc-dark.css
@@ -7825,11 +7825,6 @@ z-select button.focusable:focus,
   .list-table.compact-view td .icon-wizard-action {
     background: transparent url("../img/icon-sprite.svg?20230110") no-repeat -318px -624px; }
 
-.overlay-dialogue .list-table th:first-child {
-  padding-left: 0px; }
-.overlay-dialogue .list-table td:first-child {
-  padding-left: 42px; }
-
 .filter-highlight-row-cb {
   display: none; }
 
